--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
             <version>5.19.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.18.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
